tests/toylang/neg/001637_mutation.toylang
program a = { while a do sleep var a : bool; } .
